update pubs info

--- a/_publications/2021-09-24-nice.md
+++ b/_publications/2021-09-24-nice.md
@@ -1,6 +1,6 @@
 ---
 title: "NICE: Robust Scheduling through Reinforcement Learning-Guided Integer Programming"
-collection: toappear
+collection: publications
 permalink: /publication/nice
 date: 2022-02-22
 venue: 'AAAI'
