--- a/_publications/2022-11-30-satShare.md
+++ b/_publications/2022-11-30-satShare.md
@@ -3,7 +3,7 @@ title: "Satellite Navigation and Coordination with Limited Information Sharing"
 collection: toappear
 permalink: /publication/satShare
 date: 2022-10-26
-venue: 'Under Review'
+venue: 'L4DC 2023'
 ---
 Authors: Sydney Dolan*, **Siddharth Nayak***, Hamsa Balakrishnan
 
