--- a/_publications/2023-04-18-satShare.md
+++ b/_publications/2023-04-18-satShare.md
@@ -2,8 +2,8 @@
 title: "Satellite Navigation and Coordination with Limited Information Sharing"
 collection: toappear
 permalink: /publication/satShare
-date: 2022-10-26
-venue: 'L4DC 2023'
+date: 2023-04-18
+venue: 'L4DC'
 ---
 Authors: Sydney Dolan*, **Siddharth Nayak***, Hamsa Balakrishnan
 
