--- a/_publications/2022-05-17-SMThesis.md
+++ b/_publications/2022-05-17-SMThesis.md
@@ -1,6 +1,6 @@
 ---
 title: "Learning-based Scheduling"
-collection: toappear
+collection: publications
 permalink: /publication/SMThesis
 date: 2022-05-17
 venue: 'Master's Thesis at MIT'
