--- a/_publications/2022-05-17-SMThesis.md
+++ b/_publications/2022-05-17-SMThesis.md
@@ -3,7 +3,7 @@ title: "Learning-based Scheduling"
 collection: publications
 permalink: /publication/SMThesis
 date: 2022-05-17
-venue: 'Master's Thesis at MIT'
+venue: 'SM Thesis at MIT'
 ---
 Authors: Siddharth Nayak
 
