--- a/_publications/2022-05-17-SMThesis.md
+++ b/_publications/2022-05-17-SMThesis.md
@@ -1,9 +1,9 @@
 ---
 title: "Learning-based Scheduling"
-collection: publications
+collection: SMthesis
 permalink: /publication/SMThesis
 date: 2022-05-17
-venue: 'SM Thesis at MIT'
+venue: 'MIT'
 ---
 Authors: Siddharth Nayak
 
