--- a/_publications/2023-04-18-satShare.md
+++ b/_publications/2023-04-18-satShare.md
@@ -1,6 +1,6 @@
 ---
 title: "Satellite Navigation and Coordination with Limited Information Sharing"
-collection: publications
+collection: toappear
 permalink: /publication/satShare
 date: 2023-04-18
 venue: 'L4DC'
