attempt to fix pdf

--- a/_posts/2023-05-10-acl.md
+++ b/_posts/2023-05-10-acl.md
@@ -291,9 +291,12 @@ Getting the same quad and hamstring strength in both of my legs was an important
 
 ## Return to sports tests
 The tests I had to pass according to my surgeon to be able to determine if I am ready to return to sports. 
-<object data="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf" type="application/pdf" width="100%" height="500px">
+<object width="800" height="500" type="application/pdf" data="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf?#zoom=60&scrollbar=0&toolbar=0&navpanes=0">
+  <p>Unable to display PDF file. <a href="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf">Download</a> instead.</p>
+</object>
+<!-- <object data="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf" type="application/pdf" width="100%" height="500px">
       <p>Unable to display PDF file. <a href="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf">Download</a> instead.</p>
-    </object>
+    </object> -->
 
 <p align="center">
   <img src="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/sid_rts.jpg" width="300"/>
@@ -324,7 +327,7 @@ The tests I had to pass according to my surgeon to be able to determine if I am 
   <figcaption style="text-align:center">Eddie van Halen inspired Frankenstrat that I made.</figcaption>
 </p>
 
-* Getting research done: As I was not allowed to play anything, I also spent quite some time on my research. I had to make up for the time I was not able to work and since I had a lot of time in my hand which would have been used otherwise on my other hobbies and socialising, I got a lot of work done. This led me to writing up a few research papers and attending conferences at some really neat places like New Orleans and New Zealand.
+* Getting research done: As I was not allowed to play sports, I also spent quite some time on my research. I had to make up for the time I was not able to work and since I had a lot of time in my hand which would have been used otherwise on my other hobbies and socialising, I got a lot of work done. This led me to writing up a few research papers and attending conferences at some really neat places like New Orleans and New Zealand.
 
 * Getting fitter than before: Since there were only a few people I was talking to in-person right after my surgery, I became good friends with my PT. We even went to a few concerts together! I got to know more about different PT exercises in detail. My PT would give me customised exercises depending on what my targets were. Want to get stronger? Done, here's a set of strength training exercises you k-need to do. Want to get faster at sprinting? Just do these hip, hamstring, glutes and lower back exercises. Want to jump higher? Here you go with the plyometrics. I would say that doing PT has made me fitter and more athletic than what I was before. 
 
@@ -338,6 +341,7 @@ Things I did after surgery (obviously got permission from my PT before doing thi
 * Skydiving
 * Long distance cycling
 * Triathlon (Sprint format or [half of Olympic distance](https://en.wikipedia.org/wiki/Triathlon#Race_formats))
+* Played Cricket Nationals (although there was a slight injury scare there, it wasn't anything serious)
 
 
 After having gone through this arduous recovery I have more respect for athletes and anyone else who has physical daily jobs and the amount of effort they put in their recovery. Also, everytime I see anyone injure their knee even mildly, I wince in pain! I guess you get this magical "feel others knee pain" power once you go through this surgery.
@@ -353,7 +357,7 @@ After having gone through this arduous recovery I have more respect for athletes
 
 <p align="center">
   <img src="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/advice_trip.png" width="300"/>
-  <figcaption style="text-align:center">It would be an iro-knee if I gave advice I did not follow. Listen to your surgeons and PTs </figcaption>
+  <figcaption style="text-align:center">It would be an iro-knee if I gave advice I did not follow. Listen to your surgeons and PTs. </figcaption>
 </p>
 
 ## Resources
