attempt to fix pdf

--- a/_posts/2023-05-10-acl.md
+++ b/_posts/2023-05-10-acl.md
@@ -290,10 +290,10 @@ Getting to 90% of the ROM of the other leg. My better leg had a range of -8 degr
 Getting the same quad and hamstring strength in both of my legs was an important milestone. The day we decided to stop focussing a lot on strength training was when my operated leg had more strength than my other leg according to the tests we did!
 
 ## Return to sports tests
-The tests I had to pass according to my surgeon to be able to determine if I am ready to return to sports. 
-<object width="800" height="500" type="application/pdf" data="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf?#zoom=60&scrollbar=0&toolbar=0&navpanes=0">
+The [tests](https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf) I had to pass according to my surgeon to be able to determine if I am ready to return to sports. 
+<!-- <object width="800" height="500" type="application/pdf" data="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf?#zoom=60&scrollbar=0&toolbar=0&navpanes=0">
   <p>Unable to display PDF file. <a href="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf">Download</a> instead.</p>
-</object>
+</object> -->
 <!-- <object data="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf" type="application/pdf" width="100%" height="500px">
       <p>Unable to display PDF file. <a href="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf">Download</a> instead.</p>
     </object> -->
