attempt to fix pdf

--- a/_posts/2023-05-10-acl.md
+++ b/_posts/2023-05-10-acl.md
@@ -285,9 +285,11 @@ After this I stopped keeping a track of the exact dates important stuff happened
 
 Getting to 90% of the ROM of the other leg. My better leg had a range of -8 degrees of extension to 164 degrees of flexion. Once we reached around 85% of it we stopped decreased the frequency of working on the ROM exercises.
 
-
 ## Strength training
 Getting the same quad and hamstring strength in both of my legs was an important milestone. The day we decided to stop focussing a lot on strength training was when my operated leg had more strength than my other leg according to the tests we did!
+
+## Mental preparation
+As much as the recovery is physical, the mental aspect of the recovery is generally overshadowed. There have been a lot of [studies](https://www.diva-portal.org/smash/get/diva2:917650/FULLTEXT01.pdf) (I am only citing one study because I am not writing a research paper here) which show that athletes often report anger, depression, anxiety, lack of confidence and fear of sustaining a new injury with evidence that these psychological disturbances may affect recovery and return to sport. I myself have had this where my performance in the sports I played was affected because of this fear of re-injuring my knee. A major part of my PT was spent on preparing myself mentally for some of the drills. In the beginning, some of the drills seemed impossible or I had the fear of my knee caving in. But my PT had to drill this thought in my head that my knee and ACL are strong enough now and can take it. Although I am still not 100% confident about my knee the trust I have in my knee's stability has increased over time. And I hope to get better at the mental aspect of it soon.
 
 ## Return to sports tests
 The [tests](https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf) I had to pass according to my surgeon to be able to determine if I am ready to return to sports. 
@@ -355,6 +357,11 @@ After having gone through this arduous recovery I have more respect for athletes
 </p>
 
 
+### Things I (can) do now to avoid a retear"
+* First and foremost I will probably not ski again. 
+* Keep on training my muscles around the knee. I used to just train my quads before the injury and focussed a little on the other leg muscles. Now I try to train all muscles of my legs separately: quads (including [VMO](https://bendandmend.com.au/news/physiotherapy/the-seven-best-exercises-for-vmo-activation-early-knee-rehab/#:~:text=Vastus%20Medialis%20Oblique%20(VMO)%20is,front)%20compartment%20of%20the%20thigh.)), hamstrings, glutes, tibialis, calves, hip flexors, hip abductors and adductors. Strengthening every part of my leg has also helped me in getting more confidence in my legs stability.
+* Mentally tell myself that my knee is alright and will not cave in although I still wouldn't go crazy with the activities I would do with my knee.
+
 <p align="center">
   <img src="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/advice_trip.png" width="300"/>
   <figcaption style="text-align:center">It would be an iro-knee if I gave advice I did not follow. Listen to your surgeons and PTs. </figcaption>
@@ -364,6 +371,7 @@ After having gone through this arduous recovery I have more respect for athletes
 * The ACL Athlete Podcast: [This](https://podcasts.apple.com/us/podcast/the-acl-athlete-podcast/id1546577054) is a nice podcast about ACL recoveries I listened to a few days after my surgery.
 * [ACL recovery journey](https://www.youtube.com/watch?v=FaMuq5u6poE&ab_channel=HectorBellerin) of Hector Bellerin (Arsenal footbal player): I used this to keep track of my progress and see that it gets better.
 * r/ACL: Subreddit about all things ACL. Remember some people over there will have a much faster progress than you. It doesn't matter if you are slower. All that matters is that you are getting better than what you were before. 
+* [Kneesovertoesguy](https://www.youtube.com/c/thekneesovertoesguy): an excellent resource for exercises related to knee rehab.
 * My workout [playlist](https://open.spotify.com/playlist/4MCzV4iG6tkJb5hmR5ZfW2) for a few days.
 
 
