--- a/_posts/2023-05-10-acl.md
+++ b/_posts/2023-05-10-acl.md
@@ -292,7 +292,7 @@ Getting the same quad and hamstring strength in both of my legs was an important
 As much as the recovery is physical, the mental aspect of the recovery is generally overshadowed. There have been a lot of [studies](https://www.diva-portal.org/smash/get/diva2:917650/FULLTEXT01.pdf) (I am only citing one study because I am not writing a research paper here) which show that athletes often report anger, depression, anxiety, lack of confidence and fear of sustaining a new injury with evidence that these psychological disturbances may affect recovery and return to sport. I myself have had this where my performance in the sports I played was affected because of this fear of re-injuring my knee. A major part of my PT was spent on preparing myself mentally for some of the drills. In the beginning, some of the drills seemed impossible or I had the fear of my knee caving in. But my PT had to drill this thought in my head that my knee and ACL are strong enough now and can take it. Although I am still not 100% confident about my knee the trust I have in my knee's stability has increased over time. And I hope to get better at the mental aspect of it soon.
 
 ## Return to sports tests
-The [tests](https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf) I had to pass according to my surgeon to be able to determine if I am ready to return to sports. 
+The [tests](https://nsidn98.github.io/files/ACL_RTS_Tests.pdf) I had to pass according to my surgeon to be able to determine if I am ready to return to sports. 
 <!-- <object width="800" height="500" type="application/pdf" data="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf?#zoom=60&scrollbar=0&toolbar=0&navpanes=0">
   <p>Unable to display PDF file. <a href="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf">Download</a> instead.</p>
 </object> -->
