--- a/_posts/2023-05-10-acl.md
+++ b/_posts/2023-05-10-acl.md
@@ -293,9 +293,9 @@ As much as the recovery is physical, the mental aspect of the recovery is genera
 
 ## Return to sports tests
 The [tests](https://nsidn98.github.io/files/ACL_RTS_Tests.pdf) I had to pass according to my surgeon to be able to determine if I am ready to return to sports. 
-<!-- <object width="800" height="500" type="application/pdf" data="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf?#zoom=60&scrollbar=0&toolbar=0&navpanes=0">
+<object width="800" height="500" type="application/pdf" data="https://nsidn98.github.io/files/ACL_RTS_Tests.pdf?#zoom=60&scrollbar=0&toolbar=0&navpanes=0">
   <p>Unable to display PDF file. <a href="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf">Download</a> instead.</p>
-</object> -->
+</object>
 <!-- <object data="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf" type="application/pdf" width="100%" height="500px">
       <p>Unable to display PDF file. <a href="https://raw.githubusercontent.com/nsidn98/nsidn98.github.io/master/images/acl_memes/ACL_RTS_Tests.pdf">Download</a> instead.</p>
     </object> -->
