update L4DC poster and PMLR links

--- a/_publications/2023-04-18-satShare.md
+++ b/_publications/2023-04-18-satShare.md
@@ -7,9 +7,25 @@ venue: 'L4DC'
 ---
 Authors: Sydney Dolan*, **Siddharth Nayak***, Hamsa Balakrishnan
 
-We explore space traffic management as an application of collision-free navigation in multi-agent systems where vehicles have limited observation and communication ranges. We investigate the effectiveness of transferring a collision avoidance multi-agent reinforcement (MARL) model trained on a ground environment to a space one. We demonstrate that the transfer learning model outperforms a model that is trained directly on the space environment. Furthermore, we find that our approach works well even when we consider the perturbations to satellite dynamics caused by the Earth's oblateness. Finally, we show how our methods can be used to evaluate the benefits of information-sharing between satellite operators in order to improve coordination. [[PDF]](https://arxiv.org/abs/2211.03658)
+We explore space traffic management as an application of collision-free navigation in multi-agent systems where vehicles have limited observation and communication ranges. We investigate the effectiveness of transferring a collision avoidance multi-agent reinforcement (MARL) model trained on a ground environment to a space one. We demonstrate that the transfer learning model outperforms a model that is trained directly on the space environment. Furthermore, we find that our approach works well even when we consider the perturbations to satellite dynamics caused by the Earth's oblateness. Finally, we show how our methods can be used to evaluate the benefits of information-sharing between satellite operators in order to improve coordination. [[PDF]](https://proceedings.mlr.press/v211/dolan23a/dolan23a.pdf), [[Poster]](http://nsidn98.github.io/files/Publications_assets/satShare/L4DC_Poster.pdf)
 
 Note: Code will be made public soon.
 
+```
+@InProceedings{pmlr-v211-dolan23a,
+  title = 	 {Satellite Navigation  and Coordination with Limited Information Sharing},
+  author =       {Dolan, Sydney and Nayak, Siddharth and Balakrishnan, Hamsa},
+  booktitle = 	 {Proceedings of The 5th Annual Learning for Dynamics and Control Conference},
+  pages = 	 {1058--1071},
+  year = 	 {2023},
+  editor = 	 {Matni, Nikolai and Morari, Manfred and Pappas, George J.},
+  volume = 	 {211},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {15--16 Jun},
+  publisher =    {PMLR},
+  pdf = 	 {https://proceedings.mlr.press/v211/dolan23a/dolan23a.pdf},
+  url = 	 {https://proceedings.mlr.press/v211/dolan23a.html},
+}
+```
 <!-- Recommended citation: Your Namesdas, You. (2010). "Paper Title Number 2." <i>Journal 1</i>. 1(2). -->
 
