--- a/_publications/2023-04-18-satShare.md
+++ b/_publications/2023-04-18-satShare.md
@@ -3,11 +3,12 @@ title: "Satellite Navigation and Coordination with Limited Information Sharing"
 collection: toappear
 permalink: /publication/satShare
 date: 2023-04-18
-venue: 'L4DC'
+venue: "L4DC"
 ---
-Authors: Sydney Dolan*, **Siddharth Nayak***, Hamsa Balakrishnan
 
-We explore space traffic management as an application of collision-free navigation in multi-agent systems where vehicles have limited observation and communication ranges. We investigate the effectiveness of transferring a collision avoidance multi-agent reinforcement (MARL) model trained on a ground environment to a space one. We demonstrate that the transfer learning model outperforms a model that is trained directly on the space environment. Furthermore, we find that our approach works well even when we consider the perturbations to satellite dynamics caused by the Earth's oblateness. Finally, we show how our methods can be used to evaluate the benefits of information-sharing between satellite operators in order to improve coordination. [[PDF]](https://proceedings.mlr.press/v211/dolan23a/dolan23a.pdf), [[Poster]](http://nsidn98.github.io/files/Publications_assets/satShare/L4DC_Poster.pdf)
+Authors: Sydney Dolan\*, **Siddharth Nayak\***, Hamsa Balakrishnan
+
+We explore space traffic management as an application of collision-free navigation in multi-agent systems where vehicles have limited observation and communication ranges. We investigate the effectiveness of transferring a collision avoidance multi-agent reinforcement (MARL) model trained on a ground environment to a space one. We demonstrate that the transfer learning model outperforms a model that is trained directly on the space environment. Furthermore, we find that our approach works well even when we consider the perturbations to satellite dynamics caused by the Earth's oblateness. Finally, we show how our methods can be used to evaluate the benefits of information-sharing between satellite operators in order to improve coordination. [[PDF]](https://proceedings.mlr.press/v211/dolan23a/dolan23a.pdf), [[Poster]](http://nsidn98.github.io/files/Publications_assets/satShare/L4DC_Poster.pdf), [[Website]](https://sydneyidolan.com/2024/06/20/research-spotlight-decentralized-multi-agent-communication-through-graph-neural-networks/)
 
 Note: Code will be made public soon.
 
@@ -27,5 +28,5 @@ Note: Code will be made public soon.
   url = 	 {https://proceedings.mlr.press/v211/dolan23a.html},
 }
 ```
-<!-- Recommended citation: Your Namesdas, You. (2010). "Paper Title Number 2." <i>Journal 1</i>. 1(2). -->
 
+<!-- Recommended citation: Your Namesdas, You. (2010). "Paper Title Number 2." <i>Journal 1</i>. 1(2). -->
