add more pubs and update cv

--- a/_publications/2024-07-26-mapthor.md
+++ b/_publications/2024-07-26-mapthor.md
@@ -3,7 +3,7 @@ title: "MAP-THOR: Benchmarking Long-Horizon Multi-Agent Planning Frameworks in P
 collection: publications
 permalink: /publication/mapthor
 date: 2024-07-26
-venue: "Multi-modal Foundation Model meets Embodied AI Workshop@ ICML2024"
+venue: "Multi-modal Foundation Model meets Embodied AI Workshop @ICML"
 ---
 
 Authors: **Siddharth Nayak**\*, Adelmo Morrison Orozco\*, Marina Ten Have, Vittal Thirumalai, Jackson Zhang, Darren Chen, Aditya Kapoor, Eric Robinson, Karthik Gopalakrishnan, James Harrison, Anuj Mahajan, Hamsa Balakrishnan
