--- a/_publications/2024-08-09-fairMARL.md
+++ b/_publications/2024-08-09-fairMARL.md
@@ -3,7 +3,7 @@ title: "Towards Cooperation and Fairness in Multi-Agent Reinforcement Learning"
 collection: toappear
 permalink: /publication/fairMARL
 date: 2024-08-09
-venue: "Journal"
+venue: "CoCoMARL Workshop @RLC"
 ---
 
 Authors: Jasmine Jerry Aloor, **Siddharth Nayak**, Sydney Dolan, Victor L Qin, Hamsa Balakrishnan
